--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,10 +6,11 @@
             <use xlink:href="#icon-rss"></use>
         </svg>
     </a>
-
+<!--
     <p class="extra">
         <a class="link" href="https://github.com/sergiokopplin/indigo">Indigo theme</a>
         by
-        <a class="link" href="https://github.com/sergiokopplin/indigo">Kopplin</a>
+        <a class="link" href="https://github.com/sergiokopplin/indigo">NoThxJ</a>
     </p>
+-->
 </footer>
